style: Improve Contact Page style and fix spacing between sections

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -1,14 +1,14 @@
 .contact-container {
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
   width: 80%;
   max-width: 500px;
 }
 
 .contact-info h2 {
-  margin-bottom: 15px;
   text-align: center;
+  padding: 50px 0;
+  font-size: 1.8em;
 }
 
 .contact-item {
@@ -18,7 +18,7 @@
 }
 
 .icons {
-    display: flex;
-    place-content: center;
-    gap: 10px;
+  display: flex;
+  place-content: center;
+  gap: 10px;
 }
