--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -5,7 +5,7 @@
 
 .projects-container h2 {
   text-align: center;
-  padding: 50px 0;
+  padding-bottom: 50px;
   font-size: 1.8em;
 }
 
