--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,6 +1,6 @@
 .skills-container h2 {
   text-align: center;
-  padding: 50px 0;
+  padding-bottom: 50px;
   font-size: 1.8em;
 }
 
